Small changes on layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="main.css">
 
-    <title>Hello, world!</title>
+    <title>Weight Converter</title>
   </head>
   <body>
     <div class="container">
